--- a/app/views/admin/contexts/index.html.erb
+++ b/app/views/admin/contexts/index.html.erb
@@ -23,5 +23,5 @@
 
   <br>
 
-  <%= link_to 'New Context', new_admin_context_path, class: 'c-button -green' %>
+  <%= link_to 'New Context', new_admin_context_path, class: 'c-button -primary' %>
 </div>
