--- a/app/views/admin/contexts/new.html.erb
+++ b/app/views/admin/contexts/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New Context</h1>
-
-<%= render 'form', context: @context %>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">New Context</h1>
+  <%= render 'form', context: @context %>
+</div>
