--- a/app/views/admin/page_templates/index.html.erb
+++ b/app/views/admin/page_templates/index.html.erb
@@ -23,6 +23,6 @@
 
   <br>
 
-  <%= link_to 'New Page Template', new_admin_page_template_path, class: 'c-button -green' %>
+  <%= link_to 'New Page Template', new_admin_page_template_path, class: 'c-button -primary' %>
 
 </div>
