--- a/app/views/admin/routes/index.html.erb
+++ b/app/views/admin/routes/index.html.erb
@@ -27,6 +27,6 @@
 
   <br>
 
-  <%= link_to 'New Admin Route', new_admin_route_path, class: 'c-button -green' %>
+  <%= link_to 'New Admin Route', new_admin_route_path, class: 'c-button -primary' %>
 
 </div>
