--- a/app/views/admin/routes/new.html.erb
+++ b/app/views/admin/routes/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New Route</h1>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">New Route</h1>
 
-<%= render 'form', route: @route %>
+  <%= render 'form', route: @route %>
+</div>
