--- a/app/views/admin/site_templates/index.html.erb
+++ b/app/views/admin/site_templates/index.html.erb
@@ -23,5 +23,5 @@
 
   <br>
 
-  <%= link_to 'New Site Template', new_admin_site_template_path, class: 'c-button -green' %>
+  <%= link_to 'New Site Template', new_admin_site_template_path, class: 'c-button -primary' %>
 </div>
