--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -25,5 +25,5 @@
 
   <br>
 
-  <%= link_to 'New Site', new_admin_site_path, class: 'c-button -green' %>
+  <%= link_to 'New Site', new_admin_site_path, class: 'c-button -primary' %>
 </div>
