--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -25,5 +25,5 @@
 
   <br>
 
-  <%= link_to 'New User', new_admin_user_path, class: 'c-button -green' %>
+  <%= link_to 'New User', new_admin_user_path, class: 'c-button -primary' %>
 </div>
