--- a/app/views/admin/contexts/_form.html.erb
+++ b/app/views/admin/contexts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:admin, context]) do |f| %>
+<%= form_for([:admin, context], :html => { :class =>'c-form-basic' }) do |f| %>
     <% if context.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(context.errors.count, "error") %> prohibited this context from being saved:</h2>
@@ -11,16 +11,14 @@
         </div>
     <% end %>
 
-    <fieldset class="form-group row">
+    <fieldset class="container-input">
       <%= f.label :name, class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10"><%= f.text_field :name, class: 'form-control' %></div>
+      <div class="col-sm-10"><%= f.text_field :name,placeholder:'name', class: 'c-input' %></div>
     </fieldset>
 
-    <div class="form-group row">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'btn btn-primary' %>
-        <%= link_to 'Show', admin_context_path(context), class: 'btn btn-secondary' unless context.id.nil? %>
-        <%= link_to 'Back', admin_contexts_path, class: 'btn btn-secondary' %>
+    <div class="footer-form">
+        <%= f.submit class: 'c-button -primary' %>
+        <%= link_to 'Show', admin_context_path(context), class: 'c-button -secondary' unless context.id.nil? %>
+        <%= link_to 'Back', admin_contexts_path, class: 'c-button -secondary' %>
       </div>
-    </div>
 <% end %>
