--- a/app/views/admin/page_templates/new.html.erb
+++ b/app/views/admin/page_templates/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Page Template</h1>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">New Page Template</h1>
 
-<%= render 'form', page_template: @page_template %>
+  <%= render 'form', page_template: @page_template %>
+
+</div>
