--- a/app/views/admin/site_templates/_form.html.erb
+++ b/app/views/admin/site_templates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:admin, site_template]) do |f| %>
+<%= form_for([:admin, site_template], :html => { :class =>'c-form-basic' }) do |f| %>
     <% if site_template.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(site_template.errors.count, "error") %> prohibited this site_template from being saved:</h2>
@@ -11,19 +11,17 @@
         </div>
     <% end %>
 
-    <fieldset class="form-group row">
+    <fieldset class="container-input">
       <%= f.label :name, class: 'col-sm-2 form-control-label', class: 'col-sm-2 form-control-label' %>
-      <div class="col-sm-10">
-        <%= f.text_field :name, class: 'form-control' %>
+      <div>
+        <%= f.text_field :name,placeholder:'name',  class: 'c-input' %>
       </div>
     </fieldset>
 
-    <div class="form-group row">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= f.submit class: 'btn btn-primary' %>
-        <%= link_to 'Show', admin_site_template_path(site_template), class: 'btn btn-secondary' unless site_template.id.nil? %>
-        <%= link_to 'Back', admin_site_templates_path, class: 'btn btn-secondary' %>
-      </div>
+    <div class="footer-form">
+      <%= f.submit class: 'c-button -primary' %>
+      <%= link_to 'Show', admin_site_template_path(site_template), class: 'c-button -primary' unless site_template.id.nil? %>
+      <%= link_to 'Back', admin_site_templates_path, class: 'c-button -secondary' %>
     </div>
 
     </div>
