--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New User</h1>
+<div class="c-dashboard">
+  <h1 class="title-dashboard">New User</h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
+</div>
