Adds the action-toolbar component

--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -15,7 +15,14 @@
 <div class="l-page-list">
   <div class="wrapper">
 
-    <div class="c-input-search js-table-search"></div>
+    <div class="c-action-toolbar">
+      <ul class="buttons">
+      </ul>
+      <ul class="filters">
+        <li><div class="c-input-search js-table-search"></div></li>
+      </ul>
+    </div>
+
     <div class="js-table"></div>
 
     <table class="c-table">
