--- a/app/assets/stylesheets/components/shared/c-input-search.scss
+++ b/app/assets/stylesheets/components/shared/c-input-search.scss
@@ -7,6 +7,8 @@
     padding: 0 35px 0 15px;
     border: 1px solid $color-7;
     border-radius: 4px;
+    color: $color-4;
+    font-size: $font-size-normal;
     line-height: 40px;
 
     &::-webkit-input-placeholder {
