--- a/app/views/management/site_pages/forms/_open_content.html.erb
+++ b/app/views/management/site_pages/forms/_open_content.html.erb
@@ -31,7 +31,7 @@
     <fieldset class="form-group row">
       <%= f.label :content, class: 'col-sm-2 form-control-label' %>
       <div class="col-sm-10">
-        <div class="c-content">
+        <div class="c-wysiwyg">
           <%= f.fields_for :content, OpenStruct.new(site_page.content) do |ff| %>
               <%= ff.hidden_field :body, class: 'js-content' %>
               <%= ff.cktext_area :json, class: 'js-content-json' %>
