--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,6 +1,8 @@
 <%= render 'front/cover'%>
 
-<%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+<div class="c-content">
+  <%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+</div>
 
 <%= render 'front/footer'%>
 
