--- a/app/assets/javascripts/views/management/wysiwygView.js.erb
+++ b/app/assets/javascripts/views/management/wysiwygView.js.erb
@@ -36,6 +36,15 @@
     },
 
     /**
+     * Return true if the param is a standard html paragraph
+     * @param {string} html
+     * @return {boolean}
+     */
+    _isParagraph: function (html) {
+      return html.indexOf('<p>') === 0;
+    },
+
+    /**
      * Save the HTML output into the HTML container so the server can display the content easily
      */
     saveHTML: function () {
@@ -50,8 +59,20 @@
             return res;
           }
 
+          // By default, the block created by Sir Trevor is a standard paragraph. Nevertheless,
+          // we want this paragraph to have a special class to be styled.
+          if (this._isParagraph(block.data.text)) {
+            // When the user creates a new line by pressing Shift + Enter on his keyboard,
+            // Sir Trevor concatenate a new paragraph at the end of the main one. Instead, we
+            // just want a new line.
+            block.data.text = block.data.text.replace(/<\/p><p>/g, '<br/>');
+            // At this stage, we should only have one opening paragraph tag so we just modify
+            // it to have a class
+            block.data.text = block.data.text.replace('<p>', '<p class="paragraph">');
+          }
+
           return res + block.data.text;
-        }, '');
+        }.bind(this), '');
     },
 
     render: function () {
