Edit page per page content type

--- a/app/views/management/site_pages/edit.html.erb
+++ b/app/views/management/site_pages/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <h1>Editing Page</h1>
+  <h1><%= @title %></h1>
 
-  <%= render 'form', site_page: @site_page, form_for_path: [:management, @site_page]%>
+  <%= render @partial, site_page: @site_page, form_for_path: [:management, @site_page] unless @partial.nil?%>
 </div>
