--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -22,6 +22,7 @@ $font-family-1: 'Fira Sans', sans-serif;
 // Font sizes
 $font-size-small:    12px;
 $font-size-normal:   14px;
+$font-size-s-normal: 15px;
 $font-size-x-normal: 19px;
 $font-size-medium:   21px;
 $font-size-big:      35px;
