--- a/app/views/site_page/homepage.html.erb
+++ b/app/views/site_page/homepage.html.erb
@@ -28,8 +28,8 @@
     </p>
 
     <blockquote class="quote">
-      “A key data challenge by integrating forest management classes with forest
-      cover extent and change data from GFW’s near-real-time monitoring system”
+      A key data challenge by integrating forest management classes with forest
+      cover extent and change data from GFW’s near-real-time monitoring system
     </blockquote>
 
     <p class="paragraph">Unless otherwise noted, Atlas data are licensed under a
