Fixes some issue with the layout of the front

--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,7 +1,9 @@
 <%= render 'front/cover'%>
 
 <div class="c-content">
-  <%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+  <div class="wrapper">
+    <%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+  </div>
 </div>
 
 <%= render 'front/footer'%>
