--- a/app/assets/stylesheets/components/front/c-content.scss
+++ b/app/assets/stylesheets/components/front/c-content.scss
@@ -89,13 +89,15 @@
 
   .image {
     display: block;
-    width: 100%;
-    height: auto;
+    max-width: 100%;
     margin: 35px 0 50px;
-    max-width: $media-max-width;
 
     @media #{$mq-mobile} {
       margin: 65px auto 80px;
+    }
+
+    @media #{$mq-laptop} {
+      max-width: $media-max-width;
     }
   }
 }
