--- a/app/views/management/site_pages/show.html.erb
+++ b/app/views/management/site_pages/show.html.erb
@@ -11,7 +11,7 @@
 
   <p>
     <strong>Content:</strong>
-    <%= @site_page.content.html_safe unless @site_page.content.nil? %>
+    <%= @site_page.content['body'].html_safe unless @site_page.content.nil? %>
   </p>
 
   <p>
