--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,6 +1,6 @@
 <%= render 'front/cover'%>
 
-<%= @site_page.content.html_safe unless @site_page.content.blank? %>
+<%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
 
 <%= render 'front/footer'%>
 
