Add Link edit partial; split page show into partials

--- a/app/views/management/site_pages/forms/_open_content.html.erb
+++ b/app/views/management/site_pages/forms/_open_content.html.erb
@@ -11,6 +11,8 @@
         </div>
     <% end %>
 
+    <%= f.hidden_field :content_type %>
+
     <fieldset class="form-group row">
       <%= f.label :name, class: 'col-sm-2 form-control-label' %>
       <div class="col-sm-10"><%= f.text_field :name, class: 'form-control' %></div>
@@ -30,7 +32,7 @@
       <%= f.label :content, class: 'col-sm-2 form-control-label' %>
       <div class="col-sm-10">
         <div class="c-content">
-          <%= f.fields_for :content, OpenStruct.new(f.object.content) do |ff| %>
+          <%= f.fields_for :content, OpenStruct.new(site_page.content) do |ff| %>
               <%= ff.hidden_field :body, class: 'js-content' %>
               <%= ff.cktext_area :json, class: 'js-content-json' %>
           <% end %>
