--- a/app/views/management/site_pages/edit.html.erb
+++ b/app/views/management/site_pages/edit.html.erb
@@ -1,5 +1,21 @@
 <div class="wrapper">
-  <h1><%= @title %></h1>
+  <h1>Edit <%= @site_page.content_type_humanize %></h1>
 
-  <%= render @partial, site_page: @site_page, form_for_path: [:management, @site_page] unless @partial.nil?%>
+  <% case @site_page.content_type
+       when ContentType::OPEN_CONTENT
+         partial = 'open_content'
+       when ContentType::ANALYSIS_DASHBOARD
+         partial = 'analysis_dashboard'
+       when ContentType::DYNAMIC_INDICATOR_DASHBOARD
+         partial = 'dynamic_indicator_dashboard'
+       when ContentType::HOMEPAGE
+         partial = 'homepage'
+       when ContentType::LINK
+         partial = 'link'
+       when ContentType::MAP
+         partial = 'map'
+     end
+  %>
+
+  <%= render "management/site_pages/forms/#{partial}", site_page: @site_page, form_for_path: [:management, @site_page] unless partial.nil? %>
 </div>
