--- a/app/views/management/site_pages/new.html.erb
+++ b/app/views/management/site_pages/new.html.erb
@@ -1,8 +1,27 @@
 <div class="wrapper">
-  <h1><%= @title %></h1>
+  <%
+    case @site_page.content_type
+       when ContentType::OPEN_CONTENT
+         partial = 'open_content'
+       when ContentType::ANALYSIS_DASHBOARD
+         partial = 'analysis_dashboard'
+       when ContentType::DYNAMIC_INDICATOR_DASHBOARD
+         partial = 'dynamic_indicator_dashboard'
+       when ContentType::HOMEPAGE
+         partial = 'homepage'
+       when ContentType::LINK
+         partial = 'link'
+       when ContentType::MAP
+         partial = 'map'
+       else
+         partial = 'select_type'
+     end
+  %>
 
-  <%= link_to 'Back', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug} unless @partial.eql? 'select_type'%>
-  <%= link_to 'List', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug} if @partial.eql? 'select_type'%>
+  <h1>New <%= @site_page.content_type_humanize %></h1>
 
-  <%= render @partial, site_page: @site_page, form_for_path: [:management, :site, @site_page]%>
+  <%= link_to 'Back', {controller: 'management/site_pages', action: 'new', site_slug: @site.slug} unless @site_page.content_type.nil? %>
+  <%= link_to 'List', {controller: 'management/site_pages', action: 'index', site_slug: @site.slug} if @site_page.content_type.nil? %>
+
+  <%= render "management/site_pages/forms/#{partial}", site_page: @site_page, form_for_path: [:management, :site, @site_page] %>
 </div>
