Adds the basic header & updates the site switcher
* Adds the basic header design with the breadcrumbs
* Update the site switcher to show the current website, to auto-update its width depending on its content, to style it

--- a/app/assets/javascripts/templates/management/site-switcher.hbs
+++ b/app/assets/javascripts/templates/management/site-switcher.hbs
@@ -1,6 +1,6 @@
-<select class="c-site-switcher">
-  <option value="" disabled selected>Change site</option>
+<select class="c-site-switcher" {{#if slug}}style="width: {{width}};"{{/if}}>
+  <option value="" disabled {{#unless slug}}selected{{/unless}}>Change site</option>
   {{#each sites}}
-    <option value="{{slug}}">{{name}}</option>
+    <option value="{{slug}}" {{#if active}}selected{{/if}}>{{name}}</option>
   {{/each}}
 </select>
