--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -40,6 +40,8 @@ $color-3:  #fff;
 $color-4:  #555;
 $color-5:  #000;
 $color-6:  #333;
+$color-8:  #ff706c;
+$color-9:  #404040;
 
 // General layout
 $body-max-width:         1280px;
