--- a/app/assets/stylesheets/components/shared/c-tabs.scss
+++ b/app/assets/stylesheets/components/shared/c-tabs.scss
@@ -4,7 +4,8 @@
   height: 50px;
   margin: 0;
   padding: 0 $wrapper-mobile-padding;
-  background-color: $color-2;
+  background-color: $color-9;
+  color: rgba($color-3, .5);
   list-style: none;
 
   @media #{$mq-mobile} {
@@ -23,7 +24,8 @@
     cursor: pointer;
 
     &[aria-selected='true'] {
-      border-bottom: 5px solid $color-1;
+      background-color: $color-3;
+      color: $color-4;
     }
   }
 }
