--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -42,6 +42,7 @@ $color-5:  #000;
 $color-6:  #333;
 $color-7:  #dededd;
 $color-8:  #ff706c;
+$color-9:  #404040;
 
 // General layout
 $body-max-width:         1280px;
