Adds the extended-header and button components
* Adds the button component
* Adds the basice extended-header component
* Removes the widget option in the tab component
* Adds a bottom border to the header (as specified in the design)

--- a/app/assets/stylesheets/management/_settings.scss
+++ b/app/assets/stylesheets/management/_settings.scss
@@ -43,6 +43,7 @@ $color-6:  #333;
 $color-7:  #dededd;
 $color-8:  #ff706c;
 $color-9:  #404040;
+$color-10: darken(saturate($color-1, 10%), 5%);
 
 // General layout
 $body-max-width:         1280px;
