--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
   <%= render 'management/header' %>
+  <%= yield :extended_header %>
   <%= render 'shared/messages' %>
   <%= yield %>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
