--- a/app/assets/stylesheets/admin/_settings.scss
+++ b/app/assets/stylesheets/admin/_settings.scss
@@ -42,6 +42,7 @@ $color-5:  #000;
 $color-6:  #333;
 $color-8:  #ff706c;
 $color-9:  #404040;
+$color-10: darken(saturate($color-1, 10%), 5%);
 
 // General layout
 $body-max-width:         1280px;
