--- a/app/assets/stylesheets/components/management/c-header.scss
+++ b/app/assets/stylesheets/components/management/c-header.scss
@@ -1,5 +1,6 @@
 .c-header {
   height: 50px;
+  border-bottom: 1px solid $color-9;
   background-color: $color-6;
   color: rgba($color-3, .5);
   font-weight: bold;
