--- a/app/assets/stylesheets/components/management/c-site-switcher.scss
+++ b/app/assets/stylesheets/components/management/c-site-switcher.scss
@@ -2,7 +2,7 @@
   padding-left: 20px;
   border: 0;
   background: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTEiIGhlaWdodD0iNyIgdmlld0JveD0iMCAwIDExIDciIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHRpdGxlPmZsZWNoaXRhPC90aXRsZT48cGF0aCBkPSJNOS40ODUgMS4yNDNMNS4yNDMgNS40ODUgMSAxLjI0MyIgc3Ryb2tlLXdpZHRoPSIyIiBzdHJva2U9IiM5N0JFMzIiIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==') no-repeat center left;
-  color: darken(saturate($color-1, 10%), 5%);
+  color: $color-10;
   font-size: $font-size-normal;
   font-weight: bold;
   text-transform: uppercase;
