--- a/app/views/admin/site_steps/finish.html.erb
+++ b/app/views/admin/site_steps/finish.html.erb
@@ -1,4 +1,4 @@
-<h1>SITE CREATE!</h1>
+<h1>SITE CREATED!</h1>
 <h2>What do you want to do now?</h2>
 
 <%= link_to  'GO TO SITE', @site.url, target: '_blank' %>
