--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -24,6 +24,6 @@
 
 <br>
 
-<%= link_to 'New Site', new_admin_site_path, class: 'btn btn-primary' %>
+<%= link_to 'New Site', admin_site_steps_path, class: 'btn btn-primary' %>
 
 <%= console %>
