--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -1,6 +1,10 @@
 <%= render 'front/cover'%>
 
-<%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+<div class="c-content">
+  <div class="wrapper">
+    <%= @site_page.content['body'].html_safe unless @site_page.content['body'].blank? %>
+  </div>
+</div>
 
 <%= render 'front/footer'%>
 
