--- a/app/assets/stylesheets/components/front/c-content.scss
+++ b/app/assets/stylesheets/components/front/c-content.scss
@@ -58,6 +58,14 @@
     font-size: $font-size-medium;
     font-weight: $font-weight-light;
 
+    &::before {
+      content: '“';
+    }
+
+    &::after {
+      content: '”';
+    }
+
     @media #{$mq-mobile} {
       margin: 60px auto;
       font-size: $font-size-big;
@@ -81,13 +89,15 @@
 
   .image {
     display: block;
-    width: 100%;
-    height: auto;
+    max-width: 100%;
     margin: 35px 0 50px;
-    max-width: $media-max-width;
 
     @media #{$mq-mobile} {
       margin: 65px auto 80px;
+    }
+
+    @media #{$mq-laptop} {
+      max-width: $media-max-width;
     }
   }
 }
